objects/APL_Forecast_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting is used to manage settings for APL Sales forecast</description>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isLoginAsRSMView__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Login as RSM View</label>
        <type>Checkbox</type>
    </fields>
    <label>APL Forecast Settings</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Value__c</columns>
        <columns>Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>